fixed text overlapping somehow

--- a/animation/02-pop-up/style.css
+++ b/animation/02-pop-up/style.css
@@ -42,9 +42,7 @@ button {
 }
 
 .popup-modal p {
-  transition: transform 0.3s ease-in-out, opacity 0.4s ease;
-  transform: translate(-50%, -100%);
-  margin-bottom: 24px;
+    margin-bottom: 24px;
 }
 
 .backdrop {
@@ -56,11 +54,18 @@ button {
 }
 
 .popup-modal.show {
-  transform: translate(-50%, -50%);
   opacity: 100%;
   pointer-events: all;
 }
 
 .backdrop.show {
   opacity: 30%;
+}
+.popup-modal {
+  transition: transform 0.3s ease-in-out, opacity 0.4s ease;
+  transform: translate(-50%, -100%);
+}
+
+.popup-modal.show {
+  transform: translate(-50%, -50%);
 }
